# jsh_cpp_func

./: .gitignore  CMakeLists.txt  main_optical.cpp  main_videowrite.cpp  readme.md
include/: my_optical_func.h  my_writevideo_func.h
src/: main.cpp  my_optical_func.cpp  my_writevideo_func.cpp
